--- a/my_job/templates/my_job/home.html
+++ b/my_job/templates/my_job/home.html
@@ -1,15 +1,58 @@
 {% extends 'base.html' %}
+
 {% load crispy_forms_tags %}
 {% block title %}
     application
 {% endblock title %}
 
 {% block content %}
-<h1>Home Page</h1>
-<h2>Contact Us</h2>
-<form action="" method="POST">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button class="btn btn-primary" type="submit">Send</button>
-</form>
+<div class="row p-2">
+    <div class="col-7 mt-3">
+        <h2>Modern Fasion Store</h2>
+        <h2>Experince Best Shoping</h2>
+        <h2>You will Be Trill</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore iusto dolorum odio temporibus. At iusto temporibus omnis illum soluta laboriosam!  qui fugiat?</p>
+    </div>
+    <div class="col-5">
+        <div>
+            <img src="https://www.unsplash.com/photos/q7lul0zB0Lg" alt="canvas shoe">
+            <small>Sneakers shoes | Autumn collection By Mojtaba Fahiminia ©</small>
+        </div>
+        
+    </div>
+</div>
+<div class="row bg-primary">
+    <div class="col-4">
+
+    </div>
+    <div class="col-4 p-2">
+        <h2>Enjoy Good vibe</h2>
+        <h2>Enjoy Good vibe</h2>
+        <h2>Enjoy Good vibe</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <button class="btn btn-primary">close up</button>
+    </div>
+    <div class="col-4">
+
+    </div>
+</div>
+
+<div class="row mt-4">
+    <div class="col-6">
+        <h2>Contact Us</h2>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button class="btn btn-primary" type="submit">Send</button>
+        </form>
+    </div>
+    <div class="col-6">
+        <h2>Enjoy Good vibe</h2>
+        <h2>Enjoy Good vibe</h2>
+        <h2>Enjoy Good vibe</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <button class="btn btn-primary">Lovely</button>
+    </div>
+</div>
+
 {% endblock content %}
