--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,14 +5,14 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link active" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
       {% if user.is_authenticated %}
-        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-        <a class="nav-link" href="{% url 'job_application' %}">Jobs Application</a>
+        <a class="nav-link" href="{% url 'user:logout' %}">Logout</a>
+        <a class="nav-link" href="{% url 'user:job_application' %}">Jobs Application</a>
         <a class="nav-link" href="#">Blog</a>
       {% else %}
-         <a class="nav-link" href="{% url 'register' %}">Register</a>
-        <a class="nav-link" href="{% url 'login' %}">Login</a>
+         <a class="nav-link" href="{% url 'user:register' %}">Register</a>
+        <a class="nav-link" href="{% url 'user:login' %}">Login</a>
       {% endif %}
       
       
